--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
   "author": "Haydn Comley <haydn.comley@clearscore.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/eslint": "^8",
     "@types/node": "^18.11.18",
     "@types/prompts": "^2.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "esbuild": "^0.17.4",
+    "eslint": "^8.39.0",
+    "eslint-plugin-destructuring-newline": "^0.1.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "typescript-eslint": "^0.0.1-alpha.0"
   },
   "dependencies": {
     "chalk": "4.1.2",
