--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
-  "bin": "bin/index.js",
+  "bin": {
+    "jit": "./bin/index.js"
+  },
   "scripts": {
     "build": "node ./build.js",
     "serve": "yarn build && node ./bin/index.js",
