--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
-  "bin": "/bin/index.js",
+  "bin": "bin/index.js",
   "scripts": {
     "build": "node ./build.js && chmod +x ./src/index.js",
     "serve": "yarn build && node ./bin/index.js",
     "start": "ts-node-dev --exit-child ./src/index.ts"
   },
-  "files": [
-    "bin/**/*"
-  ],
   "keywords": [],
   "author": "Haydn Comley <haydn.comley@clearscore.com>",
   "license": "ISC",
