--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
+        "resolveJsonModule": true,
         "typeRoots": [
             "node_modules/@types",
             "node_modules/types",
