--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jit",
-  "version": "1.0.3",
-  "description": "",
+  "version": "1.0.4",
+  "description": "A CLI wrapper for common Git tasks to speed up your workflow.",
   "main": "src/index.ts",
   "bin": "bin/index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "start": "IS_TEST=true ts-node-dev --exit-child ./src/index.ts"
   },
   "keywords": [],
-  "author": "Haydn Comley <haydn.comley@clearscore.com>",
+  "author": "Haydn Comley <haydncomley@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@types/eslint": "^8",
